// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetPageChangedView renders case { title: 'title' } 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    title
  </h1>
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label=""
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders case { title: 'title', toggleLabel: 'toggle-label' } 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    title
  </h1>
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="toggle-label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders case { toggleLabel: 'toggle-label' } 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    
  </h1>
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label="toggle-label"
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;

exports[`TargetPageChangedView renders case {} 1`] = `
<div
  className="target-page-changed"
>
  <h1>
    
  </h1>
  <StyledToggleBase
    checked={false}
    className="details-view-toggle"
    label=""
    offText="Off"
    onClick={[Function]}
    onText="On"
  />
  <p>
    The target page was changed. Use the toggle to enable the visualization in the current target page.
  </p>
</div>
`;
